--- a/index.html
+++ b/index.html
@@ -1,11 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-Br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
 </head>
 <body>
-    entao eu consigo
+    <header>
+        <img src="img/logo.jpeg" alt="logo">
+        <nav>
+            <a href="nav-bar">Comunidade Ballerini</a>
+            <a href="nav-bar">Tutorial</a>
+            <a href="nav-bar">Open Source</a>
+            <a href="nav-bar">Comandos</a>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h1>Balle Bot</h1>
+            <h2>Deixe a sua comunidade segura de um jeito fácil</h2>
+            <button>Me adicione</button>
+            <img src="img/image-bot.jpeg" alt="imagem balle-Bot">
+        </section>
+            <h3>O que ela faz por você?</h3>
+            <p>1. Cria um <strong>sistema de verificação capcha</strong> para novos menbros garantirem que não são robôs.</p>
+            <p>2. Possui um <strong>sistema de banimento automático</strong> para links suspeitos que forem enviados na comunidade.</p>
+            <p>3. <strong>Sistema de avisos e banimentos manual</strong>, para pessoas administradoras ultilizarem.</p>
+        <section>
+
+        </section>
+    </main>
+    <footer>
+        <img src="img/image-rodape.jpeg" alt="BALLERINI">
+    </footer>
+
 </body>
 </html>
