--- a/index.html
+++ b/index.html
@@ -3,35 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Landing Page</title>
 </head>
 <body>
-    <header>
-        <img src="img/logo.jpeg" alt="logo">
-        <nav>
-            <a href="nav-bar">Comunidade Ballerini</a>
-            <a href="nav-bar">Tutorial</a>
-            <a href="nav-bar">Open Source</a>
-            <a href="nav-bar">Comandos</a>
+    <header class="cabecalho">
+        <img class="cabecalho-imagem" src="img/logo.svg" alt="logo">
+        <nav class="cabecalho-menu">
+            <a class="cabecalho-menu-item">Comunidade Ballerini</a>
+            <a class="cabecalho-menu-item">Tutorial</a>
+            <a class="cabecalho-menu-item">Open Source</a>
+            <a class="cabecalho-menu-item">Comandos</a>
         </nav>
     </header>
-    <main>
-        <section>
-            <h1>Balle Bot</h1>
-            <h2>Deixe a sua comunidade segura de um jeito fácil</h2>
-            <button>Me adicione</button>
-            <img src="img/image-bot.jpeg" alt="imagem balle-Bot">
-        </section>
-            <h3>O que ela faz por você?</h3>
-            <p>1. Cria um <strong>sistema de verificação capcha</strong> para novos menbros garantirem que não são robôs.</p>
-            <p>2. Possui um <strong>sistema de banimento automático</strong> para links suspeitos que forem enviados na comunidade.</p>
-            <p>3. <strong>Sistema de avisos e banimentos manual</strong>, para pessoas administradoras ultilizarem.</p>
-        <section>
+    <main class="conteudo">
+        <section class="conteudo-principal">
+            <div class="conteudo-principal-escrito">
+                <h1 class="conteudo-principal-escrito-titulo">Balle Bot</h1>
+                <h2 class="conteudo-principal-escrito-subtitulo">Deixe a sua comunidade segura de um jeito fácil</h2>
+                <button onclick="" class="conteudo-principal-escrito-botao">Me adicione!</button>
+            </div>
+            <img class="conteudo-principal-imagem" src="img/image-bot.svg" alt="imagem balle-Bot">
+        </section class="conteudo-secundario">
 
+        <section class="conteudo-secundario">
+            <h3 class="conteudo-secundario-titulo">O que ela faz por você?</h3>
+            <p class="conteudo-secundario-paragrafo">1. Cria um <strong>sistema de verificação capcha</strong> para novos menbros garantirem que não são robôs.</p>
+            <p class="conteudo-secundario-paragrafo">2. Possui um <strong>sistema de banimento automático</strong> para links suspeitos que forem enviados na comunidade.</p>
+            <p class="conteudo-secundario-paragrafo">3. <strong>Sistema de avisos e banimentos manual</strong>, para pessoas administradoras ultilizarem.</p>
         </section>
     </main>
-    <footer>
-        <img src="img/image-rodape.jpeg" alt="BALLERINI">
+    <footer class="rodape">
+        <img class="imagem-rodape" src="img/image-rodape.svg" alt="BALLERINI">
     </footer>
 
 </body>
